<resources>
	<string name="primaryPT">"10pt"</string>
	<string name="hello">Hello World !</string>
	<string name="app_name">G3阅读器</string>
	<string name="menu1">无线书城</string>
	<string name="menu2">打开背景音乐</string>
	<string name="menu3">删除</string>
	<string name="menu4">搜索</string>
	<string name="menu5">排序</string>
	<string name="menu6">返回首页</string>
	<string name="menu7">返回上一 页</string>
	<string name="menu8">新建</string>
	<string name="menu9">打开</string>
	<string name="menu10">重命名</string>
	<string name="menu11">修改</string>
	<string name="menu12">背景音乐管理 </string>
	<string name="menu13">停止</string>
	<string name="menu14">加入背景音乐库</string>
	<string name="menu15">音量放大</string>
	<string name="menu16">音量缩小</string>
	<string name="menu17">按作者排序</string>
	<string name="menu18">按文件名排序</string>
	<string name="menu19">按时间排序</string>
	<string name="menu20">重新下载</string>
	<string name="menu21">继续下载</string>
	<string name="menu22">暂停下载</string>
	<string name="menu23">适应页面</string>
	<string name="menu24">实际大小</string>
	<string name="menu25">放大</string>
	<string name="menu26">缩小</string>
	<string name="selectall">全选</string>
	<string name="fp_menu1">打开背景音乐</string>
	<string name="fp_menu1_1">关闭背景音乐</string>
	<string name="fp_menu2">绑定</string>
	<string name="fp_menu3">版权声明</string>
	<string name="fp_menu4">隐私声明</string>
	<string name="fp_menu5">用户服务协议</string>
	<string name="fp_menu6">帮助</string>
	<string name="fp_menu7">返回</string>
	<string name="fp_menu8">版权声明</string>
    <string name="fp_cat0">继续阅读</string>
	<string name="fp_cat1">无线书城</string>
	<string name="fp_cat2">我的书架</string>
	<string name="fp_cat3">本地书库</string>
	<string name="fp_cat4">我的批注</string>
	<string name="fp_cat5">我的便笺</string>
	<string name="fp_cat6">资源中心</string>
	<string name="fp_cat7">个人空间</string>
	<string name="fp_cat8">系统设置</string>
	<string name="fp_details1"> 66076本 </string>
	<string name="fp_details2"></string>
	<string name="fp_details3"> 300本 </string>
	<string name="fp_details4"></string>
	<string name="fp_details5"></string>
	<string name="fp_details6"></string>
	<string name="fp_details7"></string>
	<string name="fp_details8"></string>
	<string name="commit">提交修改</string>
	<string name="modify">修 改 </string>
	<string name="bindphone_label">绑定手机号码</string>
	<string name="devid_label">设备ID号：</string>
	<string name="nickname_label">昵称</string>
	<string name="age_label">年龄</string>
	<string name="sex_label">性别</string>
	<string name="address_label">所在地</string>
	<string name="signature_label">个性签名</string>
	<string name="unbindbtn_label">解 绑 </string>
	<string name="tip_modify_nickname">最大长度30</string>
	<string name="tip_modify_des">最大长度200</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="secrecy">保密</string>
	<string name="validation_label">请输入验证码 : </string>
	<string name="bookstore">无线书城</string>
	<string name="modifyuserinfo">修改个人信息</string>
	<string name="readonline"> 在线阅读 </string>
	<string name="readdownload"> 下载阅读  </string>
	<string name="bookupdate"> 预定更新  </string>
	<string name="favorite"> 收藏本书 </string>
	<string name="code_utf8">UTF-8</string>
	<string name="code_gb2312">GB2312</string>
	<string name="about">关于</string>
	<string name="zoom_out">缩小字体</string>
	<string name="zoom_in">放大字体</string>
	<string name="set_bookmark">增加书签</string>
	<string name="get_gotoPrev">上一页</string>
	<string name="get_gotoNext">下一页</string>
	<string name="set_type_1">粗体</string>
	<string name="set_type_2">衬线粗体</string>
	<string name="set_type_3">斜粗</string>
	<string name="swich_code" />
	<string name="aboutTitle" />
	<string name="aboutInfo" />
	<string name="aboutOK">确定</string>
	<string name="str_start">正在播放音乐...</string>
	<string name="str_close">停止播放音乐</string>
	<string name="str_pause">暂停播放音乐</string>
	<string name="str_OnCompletionListener">播放完毕</string>
	<string name="str_OnErrorListener">出错</string>
	<string name="system_soft_update">软件更新</string>
	<string name="system_soft_update_message">G3阅读器 发现新版本，现在的版本已经无法继续使用，请更新！</string>
	<string name="system_soft_isnotexit">升级软件不存在</string>
	<string name="system_soft_download_fa">系统升级软件下载失败</string>
	<string name="bookmark_booksummary">评论 </string>
	<string name="system_soft_cancel">取消</string>
	<string name="system_soft_unauthorized">确定</string>
	<string name="ret_alertpage">返回前页</string>
	<string name="msgnull">留言信息不能为空！</string>
	<string name="friendsel">请输入推荐好友手机号码！</string>
	<string name="msglengthlong">留言信息不能长于40字符！</string>
	<string name="recommending">正在向好友推荐，请稍候...</string>
	<string name="commenthint">该书暂无评论。请写下您的观点与其他用户分享吧！</string>
	<string name="systemconfig_load_message">加载数据 ......</string>
	<string name="systemconfig_pop_message">温馨提示</string>
	<string name="systemconfig_title">系统设置</string>
	<string name="systemconfig_dataandtime">日期及时间</string>
	<string name="systemconfig_startup">开机画面</string>
	<string name="systemconfig_standup">待机画面</string>
	<string name="systemconfig_welcome">无线欢迎页</string>
	<string name="systemconfig_netset">联网方式</string>
	<string name="systemconfig_refresh">刷新模式</string>
	<string name="systemconfig_recoveryFactory">恢复出厂设置</string>
	<string name="systemconfig_rotating">旋转模式</string>
	<string name="systemconfig_language">语言设置</string>
	<string name="systemconfig_sound">按键音设置</string>
	<string name="systemconfig_skin">皮肤设置</string>
	<string name="systemconfig_subscribeRemind">预订提醒设置</string>
	<string name="systemconfig_configHandsetInfo">设备信息</string>
	<string name="welcome_top_title">系统设置 >> 无线欢迎页设置</string>
	<string name="welcome_form_title">无线欢迎页设置</string>
	<string name="welcome_open">打开无线欢迎页</string>
	<string name="welcome_close">关闭无线欢迎页</string>
	<string name="welcome_ok">设置</string>
	<string name="welcome_return">返回</string>
	<string name="welcome_set_open_ok">您设置打开无线欢迎页，操作成功！</string>
	<string name="welcome_set_close_ok">您设置关闭无线欢迎页，操作成功！</string>
	<string name="welcome_set_msg">您还没有选择打开或关闭</string>
	<string name="net_top_title">系统设置 >> 联网设置</string>
	<string name="net_form_title">联网设置</string>
	<string name="net_auto">自动切换</string>
	<string name="net_td">TD</string>
	<string name="net_edge">EDGE</string>
	<string name="net_ok">设置</string>
	<string name="net_return">返回</string>
	<string name="net_set_auto_ok">您设置联网方式为自动切换，操作成功！</string>
	<string name="net_set_td_ok">您设置联网方式为TD，操作成功！</string>
	<string name="net_set_edge_ok">您设置联网方式为EDGE，操作成功！</string>
	<string name="net_set_msg">您还没有选择联网方式</string>
	<string name="refresh_top_title">系统设置 >> 刷新模式设置</string>
	<string name="refresh_form_title">刷新模式设置</string>
	<string name="refresh_noflash">GC16_NOFLASH</string>
	<string name="refresh_flash">GC16_FLASH</string>
	<string name="refresh_ok">设置</string>
	<string name="refresh_return">返回</string>
	<string name="refresh_set_noflash_ok">您设置刷新模式为GC16_NOFLASH，操作成功！
	</string>
	<string name="refresh_set_flash_ok">您设置刷新模式为GC16_FLASH，操作成功！
	</string>
	<string name="refresh_set_msg">您还没有选择刷新模式</string>
	<string name="rotating_top_title">系统设置 >> 旋转模式设置</string>
	<string name="rotating_form_title">旋转模式设置</string>
	<string name="rotating_open">打开旋转模式</string>
	<string name="rotating_close">关闭旋转模式</string>
	<string name="rotating_ok">设置</string>
	<string name="rotating_return">返回</string>
	<string name="rotating_set_open_ok">您选择打开旋转模式，操作成功！</string>
	<string name="rotating_set_close_ok">您选择关闭旋转模式，操作成功！</string>
	<string name="rotating_set_msg">您还没有选择设置模式，请选择!</string>
	<string name="language_top_title">系统设置 >> 语言设置</string>
	<string name="language_form_title">语言设置</string>
	<string name="language_s_chinese">简体中文</string>
	<string name="language_t_chinese">繁体中文</string>
	<string name="language_english">英语</string>
	<string name="language_ok">设置</string>
	<string name="language_return">返回</string>
	<string name="language_set_s_chinese_ok">您选择语言为简体中文，操作成功！</string>
	<string name="language_set_t_chinese_ok">您选择语言为繁体中文，操作成功！</string>
	<string name="language_set_english_ok">您选择语言为英语，操作成功！</string>
	<string name="language_set_msg">您还没有选择语言，请选择!</string>
	<string name="sound_top_title">系统设置 >> 按键音设置</string>
	<string name="sound_form_title">按键音设置</string>
	<string name="sound_open">打开按键音</string>
	<string name="sound_close">关闭按键音</string>
	<string name="sound_ok">设置</string>
	<string name="sound_return">返回</string>
	<string name="sound_set_open_ok">您选择打开按键音，操作成功！</string>
	<string name="sound_set_close_ok">您选择关闭按键音，操作成功！</string>
	<string name="sound_set_msg">您还没有选择设置，请选择!</string>
	<string name="skin_top_title">系统设置 >> 皮肤设置</string>
	<string name="skin_form_title">皮肤设置</string>
	<string name="skin_1">浓墨重彩</string>
	<string name="skin_2">清新简约</string>
	<string name="skin_3">天然绿色</string>
	<string name="skin_ok">设置</string>
	<string name="skin_return">返回</string>
	<string name="skin_set_skin1_ok">您选择设置皮肤为浓墨重彩，操作成功！</string>
	<string name="skin_set_skin2_ok">您选择设置皮肤为清新简约，操作成功！</string>
	<string name="skin_set_skin3_ok">您选择设置皮肤为天然绿色，操作成功！</string>
	<string name="skin_set_msg">您还没有选择皮肤，请选择!</string>
	<string name="my_note_title">我的便签</string>
	<string name="my_note_serch">搜索</string>
	<string name="my_note_all">显示全部</string>
	<string name="my_warning">警告</string>
	<string name="my_sure">确定</string>
	<string name="my_quit">退出</string>
	<string name="my_notrename">名字相同，请重新输入</string>
	<string name="my_nullname">名字为空，请输入名字</string>
	<string name="my_holdon">请等待...</string>
	<string name="my_notdeletenote">没有此便签，无法删除</string>
	<string name="my_nullnote">没有相关便签，请输入</string>
	<string name="my_rename_all">新名称仍相同，请重新输入</string>
	<string name="my_addnote">新增NOTE</string>
	<string name="my_deletenote">删除NOTE</string>
	<string name="my_modifynote">修改NOTE</string>
	<string name="my_renamenote">重命名NOTE</string>
	<string name="my_seachnote">搜索NOTE</string>
	<string name="my_work">正在处理中...</string>
	<string name="note_name">便签：</string>
	<string name="note_content">内容：</string>
	<string name="my_friend_checked">已验证</string>
	<string name="my_friend_checking">验证中</string>
	<string name="my_friend_all">全部</string>
	<string name="my_friend_none">无</string>
	<string name="my_friend_hint">温馨提示</string>
	<string name="my_friend_connecting">连接请求中，请稍候...</string>
	<string name="my_friend_connecterror">连接出错，请重试...</string>
	<string name="my_friend_connectfailed">网络暂不可用，请稍候再试...</string>
	<string name="my_friend_numchecking">此号码在验证中</string>
	<string name="my_friend_numdelete">此号码暂无法删除</string>
	<string name="my_friend_numerror">此号码非移动号码,请输入移动号码</string>
	<string name="my_friend_delete">确定要删除好友吗？</string>
	<string name="my_friend_sure">确定</string>
	<string name="my_friend_cancel">取消</string>
	<string name="my_friend_welcomall">欢迎来到全部好友</string>
	<string name="my_friend_welcomchecking">欢迎来到验证中</string>
	<string name="my_friend_welcomchecked">欢迎来到已验证</string>
	<string name="my_friend_telephone">请输入手机号码！</string>
	<string name="my_friend_telephoneerror">手机号码输入不合法！</string>
	<string name="my_friend_setall">全选</string>
	<string name="my_friend_setcancel">取消全选</string>
	<string name="my_friend_add">添加好友</string>
	<string name="bind_inputnum_showtitle">
		尊敬的用户：G3阅读器需绑定中国移动手机号码后才能联网。成功绑定后，使用阅读器产生的费用将由此号码支付。</string>
	<string name="bind_inputnum_inputnumber1">请输入绑定手机号码:</string>
	<string name="bind_inputnum_inputnumber2">请输入手机号码</string>
	<string name="bind_inputnum_readagreenmenttitle">绑定前请仔细阅读《用户服务协议》</string>
	<string name="bind_inputnum_getauthcode">同意协议并获取验证码</string>
	<string name="bind_inputnum_readagreenment">查看协议内容</string>
	<string name="bind_inputAuthcode_title">验证码已发送到您的手机，请输入验证码</string>
	<string name="bind_inputAuthcode_input1">请输入验证码:</string>
	<string name="bind_inputAuthcode_input2">请输入验证码</string>
	<string name="bind_inputAuthcode_bind">绑定</string>
	<string name="bind_inputAuthcode_getagain">再次获取验证码</string>
	<string name="Serach">搜 索</string>
	<string name="editorRecommended">编辑推荐</string>
	<string name="categoryPart">分类栏目</string>
	<string name="hotRanking">热门排行</string>
	<string name="famousWork">名家作品</string>
	<string name="highQualityPart">精品专栏</string>
	<string name="mainBooks">主要作品</string>
</resources>