<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400px"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:paddingLeft="20px"
    android:paddingRight="20px"
    android:orientation="vertical">
    
    <TextView android:id="@+id/bind_inputnum_showtitle"
    		  android:text="@string/bind_inputnum_showtitle"
 			  android:layout_height="wrap_content"
       		  android:layout_width="fill_parent"
        />
    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:layout_marginTop="10px"
    android:gravity="bottom"
    android:orientation="horizontal">
    
    <TextView android:id="@+id/noteName"
    		  android:text="@string/bind_inputnum_inputnumber1"
 			  android:layout_height="wrap_content"
       		  android:layout_width="wrap_content"
        />
    <EditText android:longClickable="false" android:id="@+id/bind_number"
    		  android:background="@drawable/phoneinput2"
    		  android:hint="@string/bind_inputnum_inputnumber2" 
    		  android:singleLine="true"	
    		  android:layout_width="fill_parent"
    	 	  android:layout_height="wrap_content"/>
  
    </LinearLayout>
	
	
	<TextView 
			  android:id="@+id/bind_inputnum_readagree"
    		  android:layout_marginTop="10px"
    		  android:layout_marginLeft="0px"
    		  android:text="@string/bind_inputnum_readagreenmenttitle" 
 			  android:layout_height="wrap_content"
       		  android:layout_width="fill_parent"
        />
	
	<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_marginTop="20px"
    android:layout_marginBottom="20px"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">
	<Button android:text="@string/bind_inputnum_getauthcode" 
			 android:layout_width="wrap_content" 
			 android:layout_height="wrap_content"
			 android:gravity="center"
			 android:id="@+id/bind_get"
			 style="@style/button"
			 android:focusable="true" 
			 android:background="@drawable/booksummarybtn"
			 />
	<Button android:text="@string/bind_inputnum_readagreenment" 
			 android:layout_width="wrap_content" 
			 android:background="@drawable/booksummarybtn"
			 android:gravity="center"
			 style="@style/button"
			 android:focusable="true" 
			 android:layout_height="wrap_content"
			 android:layout_marginLeft="10px"
			 android:id="@+id/bind_read"/>
	</LinearLayout>
      
</LinearLayout>