<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textSize="20px"
		android:background="#404040"
		android:textColor="#FFFFFF"
		android:gravity="center" android:text="@string/rotating_top_title"/>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_marginLeft="10px"
		android:layout_marginRight="10px" android:layout_marginTop="5px"
		android:layout_marginBottom="5px" android:paddingLeft="20px"
		android:paddingRight="20px" android:paddingTop="100px"

		android:layout_width="fill_parent" android:layout_height="720px"
		android:background="#FFFFFF">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textSize="20px"
			android:textColor="#000000" android:gravity="center" android:text="@string/rotating_form_title" />

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_marginTop="30px" android:layout_height="1px"
			android:background="#000000" />

		<RadioGroup android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="30px"
			android:orientation="vertical">

			<RadioButton android:id="@+id/rotating_open" android:text="@string/rotating_open"
				android:textColor="#000000" />

			<RadioButton android:id="@+id/rotating_close"
				android:text="@string/rotating_close" android:textColor="#000000" />
		</RadioGroup>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10px"
			android:orientation="horizontal">
			<Button android:id="@+id/rotating_ok" android:text="@string/rotating_ok"
				android:layout_width="100px" android:layout_height="wrap_content" />

			<Button android:id="@+id/rotating_return" android:text="@string/rotating_return"
				android:layout_width="100px" android:layout_height="wrap_content" />
		</LinearLayout>


		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/rotating_popPrompt" android:visibility="invisible"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginTop="30px" android:paddingLeft="2px"
			android:paddingRight="2px" android:paddingTop="2px"
			android:paddingBottom="2px">
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:background="#FFFFFF"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="vertical" android:layout_gravity="right"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<ImageView android:id="@+id/rotating_popPrompt_close"
						android:src="@drawable/close" android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:layout_marginRight="2px" />
				</LinearLayout>
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textSize="20px"
					android:textColor="#000000" android:gravity="center" android:text="@string/systemconfig_pop_message" />
				<TextView android:layout_width="fill_parent" android:id="@+id/rotating_popPrompt_context"
					android:layout_height="wrap_content" android:textSize="20px"
					android:textColor="#000000" android:gravity="center"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>







</LinearLayout>
